--- a/EncounterInitiativeTracker/EncounterInitiativeTracker.vbproj
+++ b/EncounterInitiativeTracker/EncounterInitiativeTracker.vbproj
@@ -95,7 +95,7 @@
       <DependentUpon>Settings.settings</DependentUpon>
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
-    <Compile Include="StaticStrings.vb" />
+    <Compile Include="Utilities.vb" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="MainForm.resx">
